Modal de encerramento, modal recuperar senha, navegação

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -231,7 +231,7 @@
           <button
             type="button"
             class="btn btn-primary"
-            (click)="clickPassword()"
+            [disabled]="(email.value == '' || email.invalid)"(click)="clickPassword()"
             data-dismiss="modal"
           >
             Recuperar senha
