--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -213,6 +213,7 @@
           <button type="button" class="btn btn-danger" data-dismiss="modal">SALVAR</button>
           <button type="button" class="btn btn-danger">PRÓXIMO</button>
           <button type="button" class="btn btn-dark btn-sm" data-toggle="modal" data-target="#modalMana" data-dismiss="modal">O QUE SÃO MANAS ?</button>
+          <button type="button" class="btn btn-dark btn-sm" data-toggle="modal" data-target="#modalMana1" data-dismiss="modal">CONIGURAR MANAS</button>
         </div>
       </div>
     </div>  
@@ -239,3 +240,26 @@
       </div>
     </div>
   </div>
+
+
+  <div class="modal fade" id="modalMana1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">CONFIGURAÇÃO DE MANAS</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <h6> A partir das suas características, definiremos os seus Manas </h6>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#modalProfile">Voltar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
