--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -213,7 +213,6 @@
           <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalSalvar" data-dismiss="modal">SALVAR</button>
           <button type="button" class="btn btn-danger">PRÓXIMO</button>
           <button type="button" class="btn btn-dark btn-sm" data-toggle="modal" data-target="#modalMana" data-dismiss="modal">O QUE SÃO MANAS ?</button>
-          <button type="button" class="btn btn-dark btn-sm" data-toggle="modal" data-target="#modalMana1" data-dismiss="modal">CONIGURAR MANAS</button>
         </div>
       </div>
     </div>  
@@ -237,9 +236,9 @@
             <button class="btn btn-primary" data-dismiss="modal" (click)="fechar()">FECHAR</button>          
           </div>
           <div>
-            <button class="btn btn-danger" data-dismiss="modal"><b>PRÓXIMO</b><h6>CONFIGURAR MANAS</h6></button>
+            <button class="btn btn-danger" data-toggle="modal" data-target="#modalMana1" data-dismiss="modal"><b>PRÓXIMO</b><h6>CONFIGURAR MANAS </h6></button>
           </div>
-        </div>
+        </div> 
       </div>
     </div>
   </div>
