Correção texto modals perfil atualizado

--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -229,14 +229,20 @@
                 <h6>Uhuu! Seu perfil foi atualizado!</h6>
             </div>
             <br/>
-            Agora você deve fazer uma <b>escolha:</b> Clique no botão azul e o cadastro termina. Você vai acordar na sua escola ou faculdade e acreditará no que quer acreditar. Mas se clicar no botão vermelho, você fica no Antena, configura os seus Manas e nós te levaremos a uma experiência gamificada, de autoconhecimento pessoal e profissional.<br/><br/><h6 style="color: red"><b>Lembre-se:</b> tudo o que oferecemos é uma rede de projetos e colaboração. Nada mais.</h6>
+              <h6>Agora você deve fazer uma <b>escolha:</b> Clique no </h6>
+              <h6 style="color: blue; display: inline"><b>botão azul </b></h6>
+              <h6 style="display: inline"> e o cadastro termina. Você vai acordar na sua escola ou faculdade e acreditará no que quer acreditar. Mas se clicar no </h6>
+              <h6 style="color: red; display: inline"><b>botão vermelho</b></h6>
+              <h6 style="display: inline">, você fica no Antena, configura os seus Manas e nós te levaremos a uma experiência gamificada, de autoconhecimento pessoal e profissional.</h6>
+              <br/><br/>
+              <h6 style="color: rgb(182, 2, 2)"><b>Lembre-se:</b> tudo o que oferecemos é uma rede de projetos e colaboração. Nada mais.</h6>
         </div>
         <div class="modal-footer">
           <div class="mr-auto">
             <button class="btn btn-primary" data-dismiss="modal" (click)="fechar()">FECHAR</button>          
           </div>
           <div>
-            <button class="btn btn-danger" data-dismiss="modal"><b>PRÓXIMO</b><h6>CONFIGURAR MANAS</h6></button>
+            <button class="btn btn-danger" data-dismiss="modal">PRÓXIMO</button>
           </div>
         </div>
       </div>
