--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -242,11 +242,7 @@
             <button class="btn btn-primary" data-dismiss="modal" (click)="fechar()">FECHAR</button>          
           </div>
           <div>
-<<<<<<< HEAD
-            <button class="btn btn-danger" data-dismiss="modal">PRÓXIMO</button>
-=======
-            <button class="btn btn-danger" data-toggle="modal" data-target="#modalMana1" data-dismiss="modal"><b>PRÓXIMO</b><h6>CONFIGURAR MANAS </h6></button>
->>>>>>> b00bfb782401e630b7d30d20fd320086627383ba
+            <button class="btn btn-danger" data-toggle="modal" data-target="#modalMana1" data-dismiss="modal"><h6>PRÓXIMO</h6></button>
           </div>
         </div> 
       </div>
