Pagina de perfil atualizada com o modal de atualização de cadastro e mana

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -17,7 +17,7 @@
                 <div id="profile-image">
                     <img id="profile-pic" [src]="fotoPerfil" alt="">
                     <a  id="buttonPopover" class="btn btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">teste</a>
-                    <a href="#/perfil" ><i class="fas fa-cog fa-3x"></i></a>
+                    <a href="#0" data-toggle="modal" data-target="#modalProfile" ><i class="fas fa-cog fa-3x"></i></a>
                 </div>
                 <div id="user-info">
                     <div class="" style="margin-top: -5px;" >{{ aluno.escola }}</div>
@@ -151,3 +151,5 @@
               </div>
             </div>
           </div>
+
+<app-studentforms></app-studentforms>
