--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -1,119 +1,3 @@
-<div id="fundo" [ngStyle]="{ 'background-image': 'url(' + fundo + ')' }">
-
-  <div class="container">
-    <h3 style="color: black; display: inline" id="frase">DADOS DE</h3>
-    <h3 id="anten" style="color: red; display: inline"> PERFIL</h3>
-    <p>
-      Preencha com seus dados complementares
-    </p>
-
-    <h6><strong>Dados Pessoais</strong></h6>
-
-    <div class="form-row">
-      <div class="col">
-        <label for="fname"></label>
-        <input type="text" id="nome" name="nome1" [(ngModel)]="nome" value="{{ aluno.nome }}" required />
-      </div>
-    </div>
-
-    <div class="form-row">
-      <div class="col">
-        <label for="sname"></label>
-        <input type="text" id="sobrenome" name="sobrenome1" [(ngModel)]="sobrenome" value="{{ aluno.sobrenome }}" />
-      </div>
-      <div class="col">
-        <label for="genero"></label>          
-        <div *ngIf="aluno.genero; else semGenero">
-          <input type="text" id="genero" name="genero1" [(ngModel)]="genero" value="{{ aluno.genero }}" />
-        </div>
-        <ng-template #semGenero>
-          <input type="text" id="genero" name="genero1" [(ngModel)]="genero" placeholder="Gênero" />
-        </ng-template>          
-      </div>
-    </div>
-
-    <div class="form-row">
-      <div class="col">
-        <label for="email1"></label>
-        <input type="text" id="email1" name="email1" [(ngModel)]="email" value="{{ aluno.email }}" />
-      </div>
-    
-      <div class="col" >
-        <label for="telefone"></label>
-        <div *ngIf="aluno.telefone; else semTel">
-           <input type="text" id="tel" name="tel1" [(ngModel)]="telefone"  value="{{ aluno.telefone }}" />
-        </div>
-        <ng-template #semTel>
-          <input type="text" id="tel" name="tel1" [(ngModel)]="telefone" placeholder="(11) XXXXX-XXXX" />
-        </ng-template>
-      </div>
-    </div>
-
-    <div class="form-row">
-      <div class="col">
-        <label for="ra"></label>
-        <input type="text" id="ra" name="ra1" [(ngModel)]="RA"  value="{{ aluno.ra }}" />
-      </div>
-      <div class="col">
-        <label for="unidae"></label>
-        <input type="text" id="unidade" name="unidade1"  [(ngModel)]="escola" value="{{ aluno.escola }}" disabled />
-      </div>
-    </div>
-    
-    <h6><strong>Documentos</strong></h6>
-
-    <div class="form-row">
-      <div class="col">
-        <label for="rg"></label>
-        <div *ngIf="aluno.rg; else semRG">
-          <input type="text"  id="rg" name="rg1" [(ngModel)]="rg"  value="{{ aluno.rg }}" />
-        </div>
-        <ng-template #semRG>
-          <input type="text" id="rg" name="rg1" [(ngModel)]="rg"  placeholder="R.G" />
-        </ng-template>
-      </div>
-      <div class="col">
-        <label for="cpf"></label>
-        <div *ngIf="aluno.cpf; else semCPF">
-          <input type="text"  id="cpf" name="cpf1" [(ngModel)]="cpf"  value="{{ aluno.cpf }}" />
-        </div>
-        <ng-template #semCPF>
-          <input type="text" id="cpf" name="cpf1" [(ngModel)]="cpf"  placeholder="CPF" />
-        </ng-template>
-      </div>
-    </div>
-
-    <h6><strong>Dados Profissionais</strong></h6>
-
-    <div class="form-row">
-      <div class="col">
-        <label for="cargo"></label>
-        <div *ngIf="aluno.cargo; else semCargo">
-          <input type="text"  id="cargo" name="cargo1" [(ngModel)]="cargo"  value="{{ aluno.cargo }}" />
-        </div>
-        <ng-template #semCargo>
-          <input type="text" id="cargo" name="cargo1" [(ngModel)]="cargo"  placeholder="Cargo" />
-        </ng-template>
-      </div>
-      <div class="col">
-        <label for="empresa"></label>
-        <div *ngIf="aluno.local_trabalho; else semEmpresa">
-          <input type="text"   id="empresa" name="empresa1" [(ngModel)]="local_trabalho" value="{{ aluno.local_trabalho }}" />
-        </div>
-        <ng-template #semEmpresa>
-          <input type="text" id="empresa" name="empresa1" [(ngModel)]="local_trabalho"  placeholder="Empresa" />
-        </ng-template>
-      </div>
-    </div>
-      
-    <input type="submit" value="Salvar" (click)="doPUT()" id="button1" />
-  </div>
-</div>
-     
-
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalProfile">
-    Launch demo modal
-  </button>
 
   <div class="modal fade" id="modalProfile" tabindex="-1" role="dialog" aria-labelledby="modalProfileLabe" aria-hidden="true" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
@@ -121,7 +5,7 @@
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">CONFIGURAÇÃO DE PERFIL</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true" id="close-modal-profile">< VOLTAR</span>
+            <span aria-hidden="true" id="close-modal-profile" style="font-size: 15px">< VOLTAR</span>
           </button>
         </div>
         <div class="modal-body">
@@ -210,8 +94,8 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalSalvar" data-dismiss="modal">SALVAR</button>
-          <button type="button" class="btn btn-danger">PRÓXIMO</button>
+          <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalSalvar" data-dismiss="modal" (click)="doPUT()">SALVAR</button>
+          <button type="button" class="btn btn-danger" (click)="doPUT()">PRÓXIMO</button>
           <button type="button" class="btn btn-dark btn-sm" data-toggle="modal" data-target="#modalMana" data-dismiss="modal">O QUE SÃO MANAS ?</button>
         </div>
       </div>
