--- a/src/app/studentforms/studentforms.component.css
+++ b/src/app/studentforms/studentforms.component.css
@@ -85,3 +85,10 @@ select {
 .social-logo{
   max-width: 30px;
 }
+
+/* .slider-wrapper {
+  display: inline-block;
+  width: 20px;
+  height: 150px;
+  padding: 0;
+} */
