--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -282,6 +282,10 @@
         </div>
         <div class="modal-body">
           <h6> A partir das suas características, definiremos os seus Manas </h6>
+          <h6 style="color:darkkhaki; display: inline"><b>Deslize o botão redondo nas barras horizontais abaixo para definir seu nível de afinidade com cada afirmação, onde 0 significa nenhuma afinidade e 10 significa total afinidade:</b></h6>
+          <div class="slider-wrapper">
+            <input type="range" min="0" max="10" value="7" step="1">
+          </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#modalProfile">Voltar</button>
         </div>
