Atualizacao do release notes

--- a/src/app/release-notes/release-notes.component.html
+++ b/src/app/release-notes/release-notes.component.html
@@ -15,6 +15,7 @@
 
 <div id="conteudoEsq">
     <ul class="list-group list-group-flush">
+        <li class="list-group-item"><a href="#16-abril">24 de Abril de 2019 - Versão 24.04.19</a></li>
         <li class="list-group-item"><a href="#16-abril">16 de Abril de 2019 - Versão 16.04.19</a></li>
         <li class="list-group-item"><a href="#02-abril">02 de Abril de 2019 - Versão 02.04.19</a></li>
         <li class="list-group-item"><a href="#14-marco">14 de Março de 2019 - Versão 14.03.19</a></li>
@@ -24,6 +25,15 @@
 </div>
 
 <div id="conteudoDir">
+    <h3 id="16-marco">24 de Abril de 2019</h3>
+    <br>
+    <h4>Update</h4>
+    <ul>
+        <li><b>Perfil do Aluno: </b>
+            <p>Modal para atualização do cadastro.</p>
+        </li>
+    </ul>
+    <br>
     <h3 id="16-marco">16 de Abril de 2019</h3>
     <br>
     <h4>Update</h4>
