--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -167,11 +167,24 @@
         <div class="modal-body">
           <h6> A partir das suas características, definiremos os seus Manas </h6>
           <h6 style="color:darkkhaki; display: inline"><b>Deslize o botão redondo nas barras horizontais abaixo para definir seu nível de afinidade com cada afirmação, onde 0 significa nenhuma afinidade e 10 significa total afinidade:</b></h6>
+          <br /> <br />
+          <div class="slider-wrapper">
+          <h6>Adoro lidar com objetos, sua localização e visão sob diferentes perspectivas.</h6> 
+            <input type="range" min="0" max="10" value="7" step="1">
+          </div> 
+          <h6>Tenho capacidade de usar fórmulas e criar raciocínios lógicos, interpretando símbolos</h6> 
           <div class="slider-wrapper">
             <input type="range" min="0" max="10" value="7" step="1">
-          </div>
+          </div> 
+          <h6>Tenho facilidade e me sinto bem quando tenho que lidar com outras pessoas</h6> 
+          <div class="slider-wrapper">
+            <input type="range" min="0" max="10" value="7" step="1">
+          </div> 
+          
         <div class="modal-footer">
-          <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#modalProfile">Voltar</button>
+          <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#modalProfile">Salvar</button>
+          <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#modalProfile">Próximo</button>
+          <!-- <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#modalProfile">Voltar</button> -->
         </div>
       </div>
     </div>
