--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -63,7 +63,7 @@
               </div>
               <div class="form-group col-md-4">
                 <label for="">CPF</label>
-                <input type="text" class="form-control" id="" name="cpf1" placeholder="{{ aluno.cpf }}" value="{{ aluno.cpf }}" [(ngModel)]="cpf">
+                <input type="text" class="form-control" minlength="11" maxlength="11" mask="000.000.000-00" id="" name="cpf1" placeholder="{{ aluno.cpf }}" value="{{ aluno.cpf }}" [(ngModel)]="cpf">
               </div>
               <div class="form-group col-md-4">
                 <label for="">Suas Redes Sociais</label>
