--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,10 +4,18 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="row" id="icons"style="margin-top: 80px">
-                    <div class="col-sm-3" id="icon"><a target="__blank"><img [src]="trof" alt=""></a></div>
-                    <div class="col-sm-3" id="icon"><a href="#/agenda"><img [src]="calendar" alt=""></a></div>
-                    <div class="col-sm-3" id="icon"><a target="_blank"><img [src]="friends" alt=""></a></div>
-                    <div class="col-sm-3" id="icon"><a target="_blank"><img [src]="shield" alt=""></a></div>
+                    <div class="col-sm-3" id="icon"><a target="__blank"><img [src]="trof" alt=""></a>
+                      <h6 style="margin-left: 20%; color: #ffff;">Prêmios</h6>
+                    </div>
+                    <div class="col-sm-3" id="icon"><a href="#/agenda"><img [src]="calendar" alt=""></a>
+                      <h6 style="margin-left: 20%; color: #ffff;">Eventos</h6>
+                    </div>
+                    <div class="col-sm-3" id="icon"><a target="_blank"><img [src]="friends" alt=""></a>
+                      <h6 style="margin-left: 20%; color: #ffff;">Projetos</h6>
+                    </div>
+                    <div class="col-sm-3" id="icon"><a target="_blank"><img [src]="shield" alt=""></a>
+                      <h6 style="margin-left: 45%; color: #ffff;">XP</h6>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4" id="profile">
@@ -16,7 +24,7 @@
                 </div>
                 <div id="profile-image">
                     <img id="profile-pic" [src]="fotoPerfil" alt="">
-                    <a  id="buttonPopover" class="btn btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">teste</a>
+                    <a  id="buttonPopover" hidden class="btn btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">teste</a>
                     <a href="#0" data-toggle="modal" data-target="#modalProfile" ><i class="fas fa-cog fa-3x"></i></a>
                 </div>
                 <div id="user-info">
