Criação de Avatar

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,13 +1,7 @@
 <div>
   <nav class="navbar navbar-light bg-light fixed-top">
     <a href="/"><img id="logo" class="navbar-brand mb-0" [src]="logo"/></a>
-    <button
-      hidden
-      class="btn btn-danger my-2 my-sm-0"
-      id="openModal"
-      data-toggle="modal"
-      data-target="#modalLogin"
-    >
+    <button hidden class="btn btn-danger my-2 my-sm-0" id="openModal" data-toggle="modal" data-target="#modalLogin">
       ENTRAR
     </button>
   </nav>
@@ -26,8 +20,8 @@
           <h5
             class="modal-title"
             id="exampleModalLongTitle"
-            style="margin-left: 16%; margin-top: 5%"
-          >
+            style="margin-left: 16%; margin-top: 5%">
+            
             <b>BEM VINDO DE VOLTA, ANTENADX!</b>
           </h5>
           <h6
