--- a/src/app/avatar-creation/avatar-creation.component.html
+++ b/src/app/avatar-creation/avatar-creation.component.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="avatarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
       <div class="modal-content">
         <button	id="close-modal-login" type="text" class="close" data-target="" aria-label="Close" style="margin-left: 85%;margin-top: 2%; font-size: 10px"> 
         <u>< VOLTAR</u></button>
@@ -8,11 +8,7 @@
         <h5 class="modal-title" id="configModalLabel2" style="margin-left: 3%"> É hora de criar sua versão virtual </h5>
         <h6 class="modal-title" id="configModalLabel3" style="color: rgb(211, 179, 0);margin-left: 3%"> Ulitize o botão de menu para navegar entre as opções de customização do Avatar </h6>
 
-
-
-
-
-
+            <div class="modal-body">
 <!-- Html AVATAR, extenso código abaixo -->
         <div id="avatar">
             <svg id="hair_back" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="360px" height="360px" viewBox="0 0 360 360" E="xMidYMid meet">
@@ -448,12 +444,11 @@
                 </div>
             </div>
         </div>
+            </div>
         
-	
-        <br/>
         <button id="reset" class="btn btn-outline-dark btn-sm"> Resetar Avatar</button>
         <button id="btnCompartilhar" class="btn btn-outline-dark btn-sm"> Compartilhar </button>
         <button id="btnFinalizar" class="btn btn-lg btn-danger"> FINALIZAR </button>
-			</div>
+		
 		</div>
 	</div>
